--- a/app/part2_3/src/main/res/values/strings.xml
+++ b/app/part2_3/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">part2_3</string>
+    <string name="long_text">
+        노년에게서 이것이야말로 인생에 위하여서. 영락과 하는 많이 이것이다. 그들의 못하다 대한 인생에 청춘이 부패뿐이다. 이성은 가는 충분히 끓는 안고, 피가 살았으며, 듣는다. 구하지 그들은 이것을 보는 있는가? 주며, 피어나는 곳이 인생을 것이다. 힘차게 위하여서 모래뿐일 것은 칼이다. 능히 불어 무엇을 아니한 설레는 타오르고 것이다. 기쁘며, 없는 시들어 뜨거운지라, 인간에 이것이다. 바이며, 풀이 생생하며, 소금이라 황금시대를 못할 자신과 그들은 찾아다녀도, 봄바람이다. 방지하는 날카로우나 품고 목숨이 커다란 봄바람이다.
+    </string>
 </resources>
